[package]
name = "infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
chrono = "0.4.31"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
once_cell = "1.19.0"
openssl = { version = "0.10", features = ["vendored"] }
futures = "0.3.29"
serde = "1.0.193"
serde_json = "1.0.108"
redis = "0.25.3"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "mysql", "chrono"] }
